# modal-transcriber-mcp

./: .dockerignore  .gitignore  Dockerfile  MODAL_URL_CONFIGURATION.md  Makefile  README.md  README_HF.md  README_LOCAL.md  README_zh.md  app.py  config.env.example  deployment_manager.py  fastmcp_server.py  main.py  packages.txt  pyproject.toml  requirements.txt  start_local.py  start_modal.py
src/: __init__.py  app.py  start_local.py  start_modal.py  test_deployment.py
src/adapters/: __init__.py  local_adapter.py  modal_adapter.py  transcription_adapter_factory.py
src/api/: __init__.py  transcription_api.py
src/config/: __init__.py  config.py  modal_config.py
src/core/: __init__.py  audio_splitter.py  config.py  exceptions.py  speaker_diarization.py  whisper_transcriber.py
src/deployment/: __init__.py  deployment_manager.py  endpoint_manager.py  modal_deployer.py
src/models/: __init__.py  (+6 more)
tests/: README_SPEAKER_TESTS.md  __init__.py  conftest.py  playwright_mcp_testing_guide.md  run_all_tests.py  test_01_podcast_download.py  test_02_remote_transcription.py  test_03_transcription_file_management.py  test_04_mp3_file_management.py  test_05_real_world_integration.py  test_06_modal_improvements.py  test_07_modal_final_improvements.py  test_08_speaker_diarization_integration.py  test_09_storage_config_unit_tests.py  test_concurrent_processing.py  test_segmentation_fallback.py  test_services.py  test_speaker_embedding_integration.py  test_speaker_embedding_service.py  test_speaker_integration.py  test_speaker_segmentation.py  test_speaker_segmentation_advanced.py
(+29 files in other folders)
