[project]
name = "podcastmcpgradio"
version = "0.1.0"
description = "FastMCP MCP Server with Modal deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "fastmcp>=2.7.0",
    "mcp",
    "modal>=1.0.3",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "gradio>=5.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
